fixed table colors not showing

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,13 @@ nav {
     float: left;
     margin-right: 10px;
     margin-top: -35px;
+    
+}
+
+nav li a {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(0, 153, 255);
 }
 
 nav ul {
@@ -11,6 +18,9 @@ nav ul {
     padding: 0;
 }
 
+table tr:nth-child(even) {
+    background-color: #949494;
+}
 .resized-img {
     width: 250px;
     height: 250px;
